ensure the Form title of a hosted Touchpoint also wraps
* supply devise translations

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -515,4 +515,8 @@ span.usa-hint.save-notice {
     padding-right: 20px;
     padding-top: 1px;
   }
+  .word-break {
+    word-break: break-all;
+    word-wrap: break-word;
+  }
 }
